# RobotArm6Dof

./: LICENSE  README.md
Light_lift_arm_6dof_h7_code/: .gitignore
Light_lift_arm_6dof_h7_code/Core/Inc/: fdcan.h  main.h  stm32h7xx_hal_conf.h  tim.h  ws2812.h
Light_lift_arm_6dof_h7_code/Core/Src/: fdcan.c  gpio.c  main.c  stm32h7xx_it.c  tim.c  ws2812.c
Light_lift_arm_6dof_h7_code/MDK-ARM/: CtrBoard-H7_USB.uvguix.admin  CtrBoard-H7_USB.uvguix.ruben  CtrBoard-H7_USB.uvoptx  CtrBoard-H7_USB.uvprojx
Light_lift_arm_6dof_h7_code/MDK-ARM/CtrBoard-H7_USB/: CtrBoard-H7_USB.build_log.htm  CtrBoard-H7_USB.htm  CtrBoard-H7_USB.lnp
Light_lift_arm_6dof_h7_code/vofa+/: crc16.c  crc16.h  vofa.c  vofa.h
SW_mod/: 12-4-4.SLDPRT  4340定子.SLDPRT  4340转子.SLDPRT  a.SLDPRT  base-0.SLDPRT  camera_frame.SLDPRT  f603.SLDPRT  link2 -print.SLDPRT  link2-mask.SLDPRT  link2.SLDPRT  link3-mask .SLDPRT  link3.SLDPRT  link4.SLDPRT  m3X10.SLDPRT  m3X20.SLDPRT  m3X25.SLDPRT  m3X35.SLDPRT  m3X45.SLDPRT  m3X50.SLDPRT  motor3-fix.SLDPRT  关节1固定.SLDPRT  关节3固定.SLDPRT  关节_定子.SLDPRT  关节_转子.SLDPRT  地板.SLDPRT  地盘壳.SLDPRT  垫片.SLDPRT  底座.SLDPRT  底座轴承60x85x17.SLDPRT  末端 - 副本 (2).SLDPRT  末端 - 副本 (3).SLDPRT  末端 - 副本.SLDPRT  末端.SLDPRT  法兰：30x42x7.SLDPRT  电机1固定.SLDPRT  电机6底座.SLDPRT  装配体1 - 副本.SLDASM  装配体1.SLDASM  装配体2.SLDASM  轴1上盖.SLDPRT
SW_mod/下位机外壳/: 螺钉说明.txt
SW_mod/惯性参数/: 杆1-惯性张量.SLDPRT
motor_test/: CMakeLists.txt
motor_test/src/: motor_test.cpp
motor_test/src/communication/: serial_port.cpp
motor_test/src/drivers/: motor_control.cpp  motor_control.h
ros2_ws/: .gitignore
(+10 files in other folders)
